<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/to_favorite_page"
        android:icon="@drawable/ic_favorite"
        android:title=""
        app:showAsAction="always"/>
</menu>